tests/neg/i6436.check
-- Error: tests/neg/i6436.scala:5:9 ------------------------------------------------------------------------------------
5 |    case '{ StringContext(${ExprSeq(parts)}: _*) } => // error
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         no implicit argument of type scala.quoted.QuoteContext was found
-- [E006] Unbound Identifier Error: tests/neg/i6436.scala:6:34 ---------------------------------------------------------
6 |      val ps: Seq[Expr[String]] = parts // error
  |                                  ^^^^^
  |                                  Not found: parts

longer explanation available when compiling with `-explain`
